@@ -1,6 +1,7 @@
 wb-mqtt-homeui (2.3.6) stable; urgency=medium
 
   * Links are updated on "Help" page
+  * "Updated at" column is removed from "Configs" page
 
  -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.ru>  Fri, 09 Apr 2021 09:35:00 +0300
 
